# wireless-wizard-wand

./: .gitignore  CMakeLists.txt  README.md  app.overlay  prj.conf
.github/workflows/: build.yml
edge-impulse-sdk/classifier/inferencing_engines/: memryx.h
hardware-files/wireless-wizard-wand/: fp-info-cache  wireless-wizard-wand.kicad_prl  wireless-wizard-wand.kicad_pro  wireless-wizard-wand.kicad_sch
model-parameters/: model_metadata.h  model_variables.h
src/: ei.cpp  forwarder.c  forwarder.cpp  imu.c  imu.cpp  led_indication.c  main.c  main.cpp  zigbee.c  zigbee.cpp
src/include/: ei.h  forwarder.h  imu.h  led_indication.h  zigbee.h  zigbee_dimmer.h  zigbee_memconfig.h
tflite-model/: tflite_learn_13_compiled.cpp  tflite_learn_13_compiled.h  trained_model_compiled.cpp  trained_model_compiled.h
